test/types/file/freadNoFloat.good
freadNoFloat.chpl:4: error: bad format: malformed number in channel.read(ref a:real(64)) with path "freadNoFloat.txt" offset 0
